# Engine-Project

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
engine/: Array.hpp  CMakeLists.txt  Debug.hpp  EngineComponent.cpp  EngineComponent.hpp  EngineData.hpp  EngineTypedefs.hpp  Resource.hpp  Serialisable.hpp
engine/acceleration/: MeshProcessor.cpp  MeshProcessor.hpp  Octree.cpp  Octree.hpp
engine/assets/: Asset.cpp  Asset.hpp  AssetManager.cpp  AssetManager.hpp
engine/assets/importing/: ImageImporter.cpp  ImageImporter.hpp  MeshImporter.cpp  MeshImporter.hpp
engine/assets/resources/: BVHAsset.cpp  BVHAsset.hpp  CubemapAsset.cpp  CubemapAsset.hpp  FontAsset.cpp  FontAsset.hpp  FragmentShaderAsset.cpp  FragmentShaderAsset.hpp  ImageAsset.cpp  ImageAsset.hpp  JSONAsset.cpp  JSONAsset.hpp  MeshAsset.cpp  MeshAsset.hpp  ScriptAsset.cpp  ScriptAsset.hpp  ShaderAsset.cpp  ShaderAsset.hpp  VertexShaderAsset.cpp  VertexShaderAsset.hpp
engine/components/: BaseComponent.cpp  BaseComponent.hpp  CameraComponent.cpp  CameraComponent.hpp  ECSComponents.hpp  InspectorCameraComponent.cpp  InspectorCameraComponent.hpp  LightComponent.cpp  LightComponent.hpp  MeshComponent.cpp  MeshComponent.hpp  MovementComponent.cpp  MovementComponent.hpp  RigidBodyComponent.cpp  RigidBodyComponent.hpp  StandardInclude.hpp
engine/core/: EngineCore.cpp  EngineCore.hpp  EngineSettings.cpp  EngineSettings.hpp  EngineSubsystem.hpp
engine/gameplay/: ComponentManager.cpp  ComponentManager.hpp  GameObject.cpp  GameObject.hpp  GameplayManager.cpp  GameplayManager.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Transform.cpp  Transform.hpp
engine/gameplay/ecs/: ECSComponentArray.cpp  ECSComponentArray.hpp  ECSComponentManager.cpp  ECSComponentManager.hpp  ECSDefinitions.hpp  ECSEntityManager.cpp  ECSEntityManager.hpp  ECSEntityObserver.cpp  ECSEntityObserver.hpp  ECSHelperFunctions.cpp  ECSHelperFunctions.hpp  (+5 more)
engine/geometry/: AxisAlignedBox.cpp  AxisAlignedBox.hpp  Frustum.cpp  Frustum.hpp  OrientedBox.cpp  OrientedBox.hpp  Point.hpp  Sphere.cpp  Sphere.hpp  Volume.hpp
engine/include/: Array.hpp  EngineData.hpp  EngineTypedefs.hpp  Exceptions.hpp  Resource.hpp  Serialisable.hpp
engine/memory/: Allocator.hpp  MemoryManager.cpp  MemoryManager.hpp  PoolAllocator.cpp  PoolAllocator.hpp  SimpleAllocator.cpp  SimpleAllocator.hpp
engine/physics/: Collision.hpp  PhysicsManager.hpp  PhysicsManager_physx.cpp  RigidBody.cpp  RigidBody.hpp
engine/platform/: GUID.cpp  GUID.hpp  WindowManager.cpp  WindowManager.hpp
engine/rendering/: Cubemap.cpp  Cubemap.hpp  Debugging.cpp  Debugging.hpp  Framebuffer.cpp  Framebuffer.hpp  GLSLStruct.cpp  GLSLStruct.hpp  HLRenderer.cpp  HLRenderer.hpp  MachineCode.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Quaternion.hpp  RVM.cpp  RVM.hpp  Renderer.cpp  Renderer.hpp  RenderingStructs.hpp  RenderingTypedefs.hpp  Renderpass.cpp  Renderpass.hpp  Renderqueue.cpp  Renderqueue.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
engine/utilities/: Clock.hpp  ImageProcessing.hpp  MathUtils.hpp  Printing.hpp  StringUtilities.hpp  Utilities.cpp  Utilities.hpp
(+379 files in other folders)
